experiments, results insights, search insights pagination limit code changes

--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -261,7 +261,7 @@
 <div class="no-experiments" *ngIf="filterExperiments.length!=0&&listOfExperiments.length===0">
         <div>{{"experiments.no_result_found"| translate}}</div>
       </div>
-      <div *ngIf='exp_totalRecord && exp_totalRecord > 10' style="margin-right:45px;"><app-record-pagination [totalRecord]='exp_totalRecord' [limitpage]='exp_limitPage' (pageChanged)="paginate($event)"></app-record-pagination></div>
+      <div *ngIf='exp_totalRecord && exp_totalRecord > 10' style="margin-right:45px;"><app-record-pagination [totalRecord]='exp_totalRecord' [limitpage]='10' (pageChanged)="paginate($event)"></app-record-pagination></div>
     </perfect-scrollbar>
   </div>
 </div> 
