--- a/findly-builder/src/app/components/result-insights/result-insights.component.html
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.html
@@ -99,7 +99,7 @@
                     </div>    
                     
                 </div>
-                <span *ngIf='totalRecord && totalRecord > 10'><app-record-pagination [totalRecord]='totalRecord' [limitpage]='limitPage' (pageChanged)="paginate($event,'Results')"></app-record-pagination></span>
+                <span *ngIf='totalRecord && totalRecord > 10'><app-record-pagination [totalRecord]='totalRecord' [limitpage]='10' (pageChanged)="paginate($event,'Results')"></app-record-pagination></span>
             </div>
         </div>
     </perfect-scrollbar>  
@@ -140,7 +140,7 @@
                 <div class="col-1 title">{{result.negativeFeedback}}</div> -->
             </div>                   
         </div>
-        <span *ngIf='Q_totalRecord && (limitPage < Q_totalRecord)'><app-record-pagination [totalRecord]='Q_totalRecord' [limitpage]='Q_limitPage' (pageChanged)="paginate($event,'QRESULT')"></app-record-pagination></span>
+        <span *ngIf='Q_totalRecord && (10 < Q_totalRecord)'><app-record-pagination [totalRecord]='Q_totalRecord' [limitpage]='10' (pageChanged)="paginate($event,'QRESULT')"></app-record-pagination></span>
     </div>
   </perfect-scrollbar>
   <!-- <div class="modal-footer">
