--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -49,7 +49,8 @@
 									</div>
 								</li>
 							</perfect-scrollbar>
-							<div class="create-new" (click)="openIndexModalPopup('default');selectIndexConfigDrop.close();">+ Create New</div>
+							
+							<div class="create-new" (click)="openIndexModalPopup('default');selectIndexConfigDrop.close();"> <img  class="mr-2"src="assets\images\plus-add.svg">Create New</div>
 						</ul>
 					</div>
 				</div>				
@@ -119,7 +120,7 @@
 										</div>
 									</li>
 								</perfect-scrollbar>
-								<div class="create-new" (click)="openModalPopup('default');selectSearchConfigDrop.close();">+ Create New</div>
+								<div class="create-new" (click)="openModalPopup('default');selectSearchConfigDrop.close();"><img  class="mr-2"src="assets\images\plus-add.svg"> Create New</div>
 							</ul>
 						</div>
 					</div>				
