1.if no faqs, we need to show the faq list screen (blank) issue fixed 2.X button should not exit but should bring to the same screen issue fixed 3.cancel or back in breadcrumb should redirect to manage extracts page .. not the new source form--issue fixed

--- a/findly-builder/src/app/components/annotool/components/pdf-annotation/pdf-annotation.component.html
+++ b/findly-builder/src/app/components/annotool/components/pdf-annotation/pdf-annotation.component.html
@@ -4,7 +4,7 @@
   <div class="navbar" id="pdfAnno">
     <ul class="nav leftPanel">
       <li class="back-arrow">
-        <img (click)='closeModal()' src="assets/icons/carrot_left.svg" alt="closeCross">
+        <img (click)='closeModal("cancelFaqExtract")' src="assets/icons/carrot_left.svg" alt="closeCross">
       </li>
       <li class="header-title">
         <span class="name">Annotate Document</span>
