--- a/findly-builder/src/app/components/annotool/components/user-guide/user-guide.component.html
+++ b/findly-builder/src/app/components/annotool/components/user-guide/user-guide.component.html
@@ -25,6 +25,6 @@
   </div>
   <div class="modal-footer">    
     <button class="kr-sg-button-primary btn_lg" (click)="getStarted()">Get Started</button>
-    <button class="kr-sg-button-secondary btn_lg" (click)="close()">Cancel</button>
+    <button class="kr-sg-button-secondary btn_lg" (click)="close('cancelFaqExtract')">Cancel</button>
   </div>
 </div>
