--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -188,12 +188,12 @@
                         <div class="title-card">{{'metrics.dash_board_view.Top_Search_Queries'| translate}} </div>
                         <div class="table-content-data">
                             <div class="table_header row m-0">
-                                <div class="col-10 header-title">{{'metrics.dash_board_view.Searched_Intent'| translate}}</div>
+                                <div class="col-10 header-title pl-0">{{'metrics.dash_board_view.Searched_Intent'| translate}}</div>
                                 <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg"> {{'metrics.dash_board_view.Count'| translate}}</div>
                             </div>
                             <div *ngIf="mostSearchedQuries">
                                 <div class="table_body row m-0" *ngFor="let top of mostSearchedQuries;let i = index">
-                                    <div class="col-10 body-title pr-3">{{top.query}}</div>
+                                    <div class="col-10 body-title pr-3  pl-0">{{top.query}}</div>
                                     <div class="col-2 body-title text-right">{{top.count}}</div>
                                 </div>
                             </div>
@@ -208,12 +208,12 @@
                         <div class="title-card">{{'metrics.dash_board_view.Top_Search_Queries_with_No_Result'| translate}} </div>
                         <div class="table-content-data">
                             <div class="table_header row m-0">
-                                <div class="col-10 header-title">{{'metrics.dash_board_view.Searched_Intent'| translate}}</div>
+                                <div class="col-10 header-title  pl-0">{{'metrics.dash_board_view.Searched_Intent'| translate}}</div>
                                 <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg"> {{'metrics.dash_board_view.Count'| translate}}</div>
                             </div>
                             <div *ngIf="topQuriesWithNoResults">
                                 <div class="table_body row m-0" *ngFor="let top of topQuriesWithNoResults;let i = index">
-                                    <div class="col-10 header-title pr-3">{{top.query}}</div>
+                                    <div class="col-10 header-title pr-3  pl-0">{{top.query}}</div>
                                     <div class="col-2 header-title text-right">{{top.count}}</div>
                                 </div>
                             </div>
@@ -253,7 +253,7 @@
                         <div class="title-card">{{'metrics.dash_board_view.Top_Search_Results'| translate}} </div>
                         <div class="table-content-data">
                             <div class="table_header row m-0">
-                                <div class="col-4 header-title"><img src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.Searched_Intent'| translate}}</div>
+                                <div class="col-4 header-title  pl-0"><img src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.Searched_Intent'| translate}}</div>
                                 <!-- <div class="col-1 header-title text-right"><img src="assets/icons/sort_up_down.svg"></div> -->
                                 <div class="col-2 header-title"><img src="assets/icons/sort_up_down.svg"> {{'metrics.dash_board_view.Appearances'| translate}}</div>
                                 <div class="col-2 header-title"><img src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.Clicks'| translate}}</div>
@@ -266,7 +266,7 @@
                                     Count</div> -->
                             </div>
                             <div class="table_body row m-0" *ngFor="let topSearchResult of topSearchResults;let i = index">
-                                <div class="col-4 body-title ">{{topSearchResult.answer}}</div>
+                                <div class="col-4 body-title  pl-0">{{topSearchResult.answer}}</div>
                                 <!-- <div class="col-1 header-title text-right"></div> -->
                                 <div class="col-2 body-title">{{topSearchResult.appearances}}</div>
                                 <div class="col-2 body-title">{{topSearchResult.clicks}}</div>
