FLY-2558 UAT_SDK_In Fullpageresult screen, Overlapping of show all text with scroller issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1279,6 +1279,7 @@ input:focus{
   margin-top: 0px !important;
   margin-bottom: 12px !important;
   font-weight: initial !important;
+  margin-right: 15px !important;
 }
 
 .sdk-top-down-interface .faqs-search-data-container{
