--- a/findly-builder/src/app/components/settings/settings.component.html
+++ b/findly-builder/src/app/components/settings/settings.component.html
@@ -27,6 +27,10 @@
             <div class="bread-name active-name" >{{"settings.web_mobile_client" | translate}}</div>
             <!-- <img src="assets/icons/viewinstruction.svg">
          <div class="bread-name active-name1"  *ngIf="existingCredential">View Instructions</div> -->
+         <label class="kr-sg-toggle">
+            <input type="checkbox" checked>
+            <div class="slider"><span class="enabled">{{"settings.channel_enabled" | translate}}</span><span class="disabled">{{"settings.channel_enabled" | translate}}</span></div>
+        </label>
         </div>
     </div>
 
@@ -42,11 +46,11 @@
                     <div class="dropdown dropdown-open">
                         <button class="dropdown-toggle  p-0 border-0" ngbDropdownToggle><img src="assets/icons/elipse.svg"></button>                                            
                         <ul class="dropdown-menu content-menu faq-filter-add p-0" ngbDropdownMenu> 
-                            <li (click)="disableCredential()"><a (click)="(enableConfiguration = !enableConfiguration)?  disableCredential() : '' ">{{enableConfiguration?'Disable':'Enable'}}</a></li>
+                            <li (click)="(enableConfiguration = !enableConfiguration)?  disableCredential() : '' ">{{enableConfiguration?'Disable':'Enable'}}</li>
                             <!-- <li (click)="disableCredential()"><a (click)="enableConfiguration = !enableConfiguration"> Disable</a></li> 
                             <li *ngIf="!enableConfiguration = enableConfiguration" (click)="configureCredential()"><a> Enable</a></li>  -->
                             <!-- <li><a (click)="enableConfiguration = !enableConfiguration) ? disableCredential()">Enaable</a></li> -->
-                            <li><a>{{"settings.delete" | translate}} </a></li>               
+                            <li class="d-none"><a>{{"settings.delete" | translate}} </a></li>               
                         </ul>
                     </div>
                 </div>
@@ -235,10 +239,10 @@
                     </div>
 
                     <div class="border-line"></div>
-                    <div class="accordion-sec d-none">{{"settings.view_JSON_web_encryption_public_key " | translate}} <img
+                    <div class="accordion-sec ">{{"settings.view_JSON_web_encryption_public_key " | translate}} <img
                             src="assets/images/icons/carrot_up.svg"></div>
                 </div>
-                <div class="group-radiobutton">
+                <div class="group-radiobutton d-none">
                     <div class="heading-title">{{"settings.task_setup" | translate}} </div>
                     <div class="kr-sg-radiobutton d-block">
                         <input id="radio-32" name="radio" class="radio-custom" type="radio" checked>
@@ -249,16 +253,12 @@
                         <label for="radio-33" class="radio-custom-label"> {{"settings.no_task_setup_info" | translate}}  </label>
                     </div>
                 </div>
-                <label class="kr-sg-toggle">
-                    <input type="checkbox" checked>
-                    <div class="slider"><span class="enabled">{{"settings.channel_enabled" | translate}}</span><span class="disabled">{{"settings.channel_enabled" | translate}}</span></div>
-                </label>
             </div>
         </div>
     </perfect-scrollbar>
     <div class="footer-sec">
         <div class="btn-sec">
-            <div>
+            <div *ngIf=!existingCredential>
                 <button class="kr-sg-button-secondary btn_lg" (click)="cancel()">{{"settings.cancel" | translate}} </button>
             </div>
             <div>
@@ -266,6 +266,7 @@
                     (click)="back()"> {{"settings.back" | translate}}</button>
                 <button class="kr-sg-button-primary btn_lg" (click)="continue()" *ngIf="slider!==3"
                     [disabled]="(!(credntial.name) || !(credntial.awt)) && (slider==2)">{{"settings.continue" | translate}}</button>
+                    <button class="kr-sg-button-secondary btn_lg"  *ngIf=existingCredential (click)="cancel()">{{"settings.cancel" | translate}} </button>
                 <button class="kr-sg-button-primary btn_lg" *ngIf="slider==3"
                     (click)="configureCredential()"> {{"settings.save" | translate}}</button>
 
