--- a/findly-builder/src/app/components/settings/settings.component.scss
+++ b/findly-builder/src/app/components/settings/settings.component.scss
@@ -479,6 +479,7 @@
         background: #F8F9FA;  
         padding: 10px;
         .btn-sec{
+            margin-right: 20px;
             width: 810px;
             margin: 0 auto;
             display: flex;
